<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/homeicon"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/eventicon"
        android:title="@string/title_event"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/writeicon"
        android:title="@string/title_dashboard"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/searchicon"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/mypageicon"
        android:title="@string/title_mypage"/>

</menu>
