<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.with_us.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.with_us.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.with_us.ui.search.searchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.example.with_us.ui.mypage.mypageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_mypage" />
    <fragment
        android:id="@+id/navigation_event"
        android:name="com.example.with_us.ui.event.eventFragment"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_event" />
</navigation>